Receipt generation via kafka message and update product quantity in case of cancelled/failed payments using Kafka with retry incase of concurrent updates with some refactoring.